# kaccessible

./: CMakeLists.txt  Messages.sh  README  kaccessibleapp.cpp  kaccessibleapp.h  kaccessiblebridge.cpp  kaccessiblebridge.h  kaccessibleinterface.h  org.kde.kaccessible.service.in
